Added separate pages for real estate, commercial, and aerial surveying.

--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -8,25 +8,6 @@
     </div>
 </div>
 
-<div class="row philosophy align-middle align-center full-width">
-    <div class="medium-6 small-12 columns">
-        <h1 class="medium-text-center">Our Philosophy</h1>
-        <p>
-            Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-            montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.Donec
-            pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis natoque penatibus et magnis dis parturient
-        </p>
-        <!--<div class="happy-customers text-center">-->
-            <!--<h2 class="amount">5,056</h2>-->
-            <!--<span class="caption">happy customers</span>-->
-        <!--</div>-->
-    </div>
-    <div class="medium-6 small-12 columns philosophy-hero">
-
-    </div>
-</div>
-
 <div class="row align-middle align-center text-center full-width our-team">
     <div class="small-12 columns">
         <div class="row align-center">
@@ -80,16 +61,10 @@
 
 <div class="row align-middle align-center text-center full-width latest-work">
     <div class="small-12 columns">
-        <!--<div class="row align-center">-->
-            <!--<div class="small-12 columns">-->
-                <!--<h1>Recent Work</h1>-->
-            <!--</div>-->
-        <!--</div>-->
 
         <div class="row align-center">
             <div class="column text-center call-to-action">
-                <a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>
-                <a href="#/contact" class="button large alert radius">Schedule An Appointment</a>
+                <a href="#/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
             </div>
         </div>
     </div>
