--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -13,78 +13,6 @@
         </div>
         <hr class="section-progress">
         <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
-        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" nng-bind="vm.currentSection.learnMoreText">Learn More</button>
-    </div>
-</div>
-
-<div class="home-content">
-
-    <div class="row full-width">
-        <div class="column small-12">
-            <div class="row standard-width">
-                <div class="column text-center small-12">
-                    <h2>Licensed by the FAA</h2>
-                    <hr>
-                    <div class="row align-middle">
-                        <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>The FAA requires that all commercial operators of sUAV’s (Drones) be licensed and be proficient in Aeronautics and Air Space Regulations. Cinescape operators carry section 107 certifications and are fully insured giving our customers complete piece mind. Our staff are trained to work with the FAA and Air Traffic Control Towers in the event that operating limitations occur due to flight restrictions or proximity to public airports.</p>
-                        </div>
-                        <div class="small-12 medium-4 columns small-order-1 medium-order-2">
-                            <img src="dist/images/faa-logo.png" alt="FAA Logo"/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row full-width">
-        <div class="column small-12">
-            <div class="row standard-width">
-                <div class="column text-center small-12">
-                    <h2>Well Equipped</h2>
-                    <hr>
-                    <div class="row align-middle">
-                        <div class="small-12 medium-4 columns">
-                            <img src="dist/images/s1000.png" alt="Aerial Drone"/>
-                        </div>
-                        <div class="small-12 medium-8 columns">
-                            <p>Whether you’re looking for a simple real estate presentation or a full commercial production,
-                                we have a wide range of the latest cameras, sUAV’s and Post Production equipment to handle any size job. Our sUAV’s are equipped with fully autonomous flight automation systems allowing us to perform complex shots that are difficult to achieve while flying manually.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row full-width">
-        <div class="column small-12">
-            <div class="row standard-width">
-                <div class="column text-center small-12">
-                    <h2>Professionally Edited Video</h2>
-                    <hr>
-                    <div class="row align-middle">
-                        <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>
-                        </div>
-                        <div class="small-12 medium-4 columns small-order-1 medium-order-2">
-                            <img src="dist/images/video-editing.jpg" alt="Video Editing Software"/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row full-width">
-        <div class="column text-center small-12">
-            <div class="row standard-width">
-                <div class="column text-center call-to-action small-12">
-                    <a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>
-                    <a href="#/contact" class="button large alert radius">Schedule An Appointment</a>
-                </div>
-            </div>
-        </div>
+        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" nng-bind="vm.currentSection.learnMoreText">Learn More <small>about {{vm.currentSection.title}}</small></button>
     </div>
 </div>
