Added commercial highlight video.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -13,6 +13,6 @@
         </div>
         <hr class="section-progress">
         <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
-        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" nng-bind="vm.currentSection.learnMoreText">Learn More <small>about {{vm.currentSection.title}}</small></button>
+        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" >Learn More <small>about {{vm.currentSection.title}}</small></button>
     </div>
 </div>
