--- a/app/angular-app/commercial/commercial.html
+++ b/app/angular-app/commercial/commercial.html
@@ -5,7 +5,7 @@
         <hr>
 
         <div class="flex-video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VZkQteL-3Aw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bJVNYgphMcs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
 
     </div>
