Added some content, minor tweaks and refinements.

--- a/app/angular-app/real-estate/real-estate.html
+++ b/app/angular-app/real-estate/real-estate.html
@@ -60,7 +60,7 @@
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>
+                            <p>Our staff members have years of experience using the most advanced post production tools such as Autodesk Flame and Smoke, Davinci Resolve, Adobe After Effects, and Avid Media Composer. Whether you need a simple Real Estate video or a full scale production of a large estate, Cinescape is equipped to handle your HD or 4K project and deliver it to your streaming service.</p>
                         </div>
                         <div class="small-12 medium-4 columns small-order-1 medium-order-2">
                             <img src="dist/images/video-editing.jpg" alt="Video Editing Software"/>
