--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -42,20 +42,20 @@
             <div class="small-12 medium-6 large-5 columns">
                 <p>
                     <strong>With over 25 years of combined Cinema and Television experience,
-                        our staff strive to provide the highest quality aerial footage for our customers
+                        our staff strives to provide the highest quality footage for our customers.
                     </strong>
                 </p>
             </div>
         </div>
-        <div class="row align-center">
-            <div class="small-12 medium-6 large-5 columns">
-                <ul>
-                    <li>We are Licensed Pilots with FAA 333 sUAV Exemptions</li>
-                    <li>Fully Insured for Commercial Aerial Cinematography</li>
-                    <li>FAA Exemption #22104</li>
-                </ul>
-            </div>
-        </div>
+        <!--<div class="row align-center">-->
+            <!--<div class="small-12 medium-6 large-5 columns">-->
+                <!--<ul>-->
+                    <!--<li>We are Licensed Pilots with FAA 333 sUAV Exemptions</li>-->
+                    <!--<li>Fully Insured for Commercial Aerial Cinematography</li>-->
+                    <!--<li>FAA Exemption #22104</li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
 
