Removed aerial surveying.

--- a/app/angular-app/commercial/commercial.html
+++ b/app/angular-app/commercial/commercial.html
@@ -5,7 +5,7 @@
         <hr>
 
         <div class="flex-video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bJVNYgphMcs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/173287688?color=ff0000&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
     </div>
@@ -17,14 +17,14 @@
         <div class="column small-12">
             <div class="row standard-width">
                 <div class="column text-center small-12">
-                    <h2>Licensed by the FAA</h2>
+                    <h2>Professionally Edited Video</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>The FAA requires that all commercial operators of sUAV’s (Drones) be licensed and be proficient in Aeronautics and Air Space Regulations. Cinescape operators carry section 107 certifications and are fully insured giving our customers complete piece mind. Our staff are trained to work with the FAA and Air Traffic Control Towers in the event that operating limitations occur due to flight restrictions or proximity to public airports.</p>
+                            <p>Our staff members have years of experience using the most advanced post production tools such as Autodesk Flame and Smoke, Davinci Resolve, Adobe After Effects, and Avid Media Composer. Whether you need a simple Real Estate video or a full scale production of a large estate, Cinescape is equipped to handle your HD or 4K project and deliver it to your streaming service.</p>
                         </div>
                         <div class="small-12 medium-4 columns small-order-1 medium-order-2">
-                            <img src="dist/images/faa-logo.png" alt="FAA Logo"/>
+                            <img src="dist/images/video-editing.jpg" alt="Video Editing Software"/>
                         </div>
                     </div>
                 </div>
@@ -45,25 +45,6 @@
                         <div class="small-12 medium-8 columns">
                             <p>Whether you’re looking for a simple real estate presentation or a full commercial production,
                                 we have a wide range of the latest cameras, sUAV’s and Post Production equipment to handle any size job. Our sUAV’s are equipped with fully autonomous flight automation systems allowing us to perform complex shots that are difficult to achieve while flying manually.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row full-width">
-        <div class="column small-12">
-            <div class="row standard-width">
-                <div class="column text-center small-12">
-                    <h2>Professionally Edited Video</h2>
-                    <hr>
-                    <div class="row align-middle">
-                        <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>
-                        </div>
-                        <div class="small-12 medium-4 columns small-order-1 medium-order-2">
-                            <img src="dist/images/video-editing.jpg" alt="Video Editing Software"/>
                         </div>
                     </div>
                 </div>
