--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -11,6 +11,7 @@
         <div class="title-wrapper" style="opacity: 0">
             <a ng-repeat="section in vm.sections track by $index" ng-class="{active: vm.currentSection.section == section.section}" ng-style="section.translateStyle" href="javascript:void(0);" ng-click="vm.goToSection(section, 10000)"><em ng-bind="section.title"></em></a>
         </div>
+        <hr class="section-progress-bg">
         <hr class="section-progress">
         <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
         <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" >Learn More</button>
