--- a/app/angular-app/commercial/commercial.html
+++ b/app/angular-app/commercial/commercial.html
@@ -5,7 +5,7 @@
         <hr>
 
         <div class="flex-video widescreen">
-            <iframe src="https://player.vimeo.com/video/173287688?color=ff0000&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/173287688?color=ff0000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
     </div>
