--- a/app/angular-app/real-estate/real-estate.html
+++ b/app/angular-app/real-estate/real-estate.html
@@ -5,7 +5,7 @@
         <hr>
 
         <div class="flex-video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YueogQq_XoI?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/173354798?color=ff0000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
     </div>
