--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
                     <!-- off-canvas title bar for 'small' screen -->
                     <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
                         <div class="title-bar">
-                            <span class="title-bar-title"><a href="#/">Cinescape</a></span>
+                            <span class="title-bar-title"><a href="#/" class="logo" title="Cinescape Productions"><i></i></a></span>
                             <!--<button class="menu-icon" type="button" data-open="offCanvasRight"></button>-->
                         </div>
                         <div class="title-bar-right">
@@ -46,7 +46,7 @@
                     <header>
                         <div class="row full-width">
                             <div class="column large-4 medium-2">
-                                <a class="logo" href="#/">
+                                <a class="logo" href="#/" title="Cinescape Productions">
                                     <i></i>
                                 </a>
                             </div>
@@ -80,14 +80,14 @@
     <footer id="footer">
         <div class="row align-middle">
             <div class="small-12 medium-4 columns">
-                818-732-0006
+                <i class="fa fa-phone"></i>818-732-0006
             </div>
             <div class="small-12 medium-4 columns text-center">
-                Based in Southern California
+                <i class="fa fa-location-arrow"></i>Based in Southern California
             </div>
             <div class="small-12 medium-4 columns text-right">
                 <!--<button class="button secondary" ng-click="base.onScrollToTopClick()"><i class="fa-angle-up fa"></i></button>-->
-                <a href="mailto:cinescape@cinescape.com">cinescape@cinescape.com</a>
+                <i class="fa fa-envelope-o"></i><a href="mailto:info@cinescape.com">info@cinescape.com</a>
             </div>
         </div>
     </footer>
