--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -64,7 +64,7 @@
 
         <div class="row align-center">
             <div class="column text-center call-to-action">
-                <a href="#/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
+                <a href="#!/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
             </div>
         </div>
     </div>
