--- a/app/angular-app/real-estate/real-estate.html
+++ b/app/angular-app/real-estate/real-estate.html
@@ -75,8 +75,8 @@
         <div class="column text-center small-12">
             <div class="row standard-width">
                 <div class="column text-center call-to-action small-12">
-                    <!--<a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>-->
-                    <a href="#/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
+                    <!--<a href="#!/portfolio" class="button large alert radius">Checkout Our Latest Work</a>-->
+                    <a href="#!/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
                 </div>
             </div>
         </div>
