--- a/app/angular-app/aerial/aerial.html
+++ b/app/angular-app/aerial/aerial.html
@@ -75,7 +75,7 @@
         <div class="column text-center small-12">
             <div class="row standard-width">
                 <div class="column text-center call-to-action small-12">
-                    <a href="#/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
+                    <a href="#!/contact" class="button large alert radius"><i class="fa fa-calendar"></i> Schedule An Appointment</a>
                 </div>
             </div>
         </div>
