Optimized sass imports and tweaked house image.

--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -42,7 +42,7 @@
             <div class="small-12 medium-6 large-5 columns">
                 <p>
                     <strong>With over 25 years of combined Cinema and Television experience,
-                        our staff strives to provide the highest quality footage for our customers.
+                        our staff strives to provide the highest quality productions for our customers.
                     </strong>
                 </p>
             </div>
