--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -13,7 +13,7 @@
         </div>
         <hr class="section-progress-bg">
         <hr class="section-progress">
-        <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
+        <h1 style="opacity: 0" ng-bind-html="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
         <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" >Learn More</button>
     </div>
 </div>
