--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="small-12 medium-4 columns text-right">
                 <!--<button class="button secondary" ng-click="base.onScrollToTopClick()"><i class="fa-angle-up fa"></i></button>-->
-                <i class="fa fa-envelope-o"></i><a href="mailto:info@cinescape.com">info@cinescape.com</a>
+                <i class="fa fa-envelope-o"></i><a href="mailto:info@cinescape.us">info@cinescape.us</a>
             </div>
         </div>
     </footer>
