--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Professional TV/Web Commercials and Real Estate Cinematography located in Southern California">
     <link rel="stylesheet" href="dist/app.css">
-    <!--<link rel="stylesheet" href="dist/app.css">-->
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-80348006-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body ng-controller="BaseCtrl as base">
     <div id="wrap">
