--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -1,12 +1,12 @@
 <div class="row align-middle home-hero align-center">
     <div ng-repeat="section in vm.sections track by $index" class="hero-img" ng-class="{'hero-active': vm.currentSection.section == section.section}" style="background-image: url('dist/images/{{section.backgroundImage}}');"></div>
     <div class="hero-overlay"></div>
-    <div class="sectionIndicatorWrapper">
-        <ul>
-            <li ng-repeat="section in vm.sections track by $index" class="sectionIndicator" ng-class="{active: vm.currentSection.section == section.section}"></li>
-        </ul>
-        <!--<div class="sectionProgress"></div>-->
-    </div>
+    <!--<div class="sectionIndicatorWrapper">-->
+        <!--<ul>-->
+            <!--<li ng-repeat="section in vm.sections track by $index" class="sectionIndicator" ng-class="{active: vm.currentSection.section == section.section}"></li>-->
+        <!--</ul>-->
+        <!--&lt;!&ndash;<div class="sectionProgress"></div>&ndash;&gt;-->
+    <!--</div>-->
     <div class="column text-center hero-text">
         <div class="title-wrapper" style="opacity: 0">
             <a ng-repeat-start="section in vm.sections track by $index" ng-class="{active: vm.currentSection.section == section.section}" ng-style="section.translateStyle" href="javascript:void(0);" ng-click="vm.goToSection(section, 10000)"><em ng-bind="section.title"></em></a>
