Added contact-us php script and google recaptcha.

--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -54,6 +54,12 @@
             </div>
 
             <div class="row">
+                <div class="small-12 columns">
+                    <div class="g-recaptcha" data-sitekey="6LdLdiQTAAAAAKKPFi8gEFpWEnZwgOKkkzLRbsbZ"></div>
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="small-12 columns text-right">
                     <button type="submit" class="button large alert radius" ng-disabled="vm.isSubmitting">Submit<span ng-show="vm.isSubmitting">ing...</span></button>
                 </div>
