--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <meta name="description" content="Professional TV/Web Commercials and Real Estate Cinematography located in Southern California">
     <link rel="stylesheet" href="dist/app.css">
 
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
