Added brandon and darren photo. Updated section text.

--- a/app/angular-app/real-estate/real-estate.html
+++ b/app/angular-app/real-estate/real-estate.html
@@ -56,7 +56,7 @@
         <div class="column small-12">
             <div class="row standard-width">
                 <div class="column text-center small-12">
-                    <h2>Professionally Edited Video</h2>
+                    <h2>Professionally Edited Video and Sound</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
