--- a/app/angular-app/commercial/commercial.html
+++ b/app/angular-app/commercial/commercial.html
@@ -17,15 +17,14 @@
         <div class="column small-12">
             <div class="row standard-width">
                 <div class="column text-center small-12">
-                    <h2>Well Equipped</h2>
+                    <h2>Industry Standard Film and Audio Equipment</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-4 columns">
                             <img src="dist/images/dragon.png" alt="Red Dragon Camera"/>
                         </div>
                         <div class="small-12 medium-8 columns">
-                            <p>Whether you’re looking for a simple real estate presentation or a full commercial production,
-                                we have a wide range of the latest cameras, sUAV’s and Post Production equipment to handle any size job. Our sUAV’s are equipped with fully autonomous flight automation systems allowing us to perform complex shots that are difficult to achieve while flying manually.</p>
+                            <p>At Cinescape we have a wide range of the latest cameras, sUAV’s and Post Production equipment to handle any size job. Our sUAV’s are equipped with fully autonomous flight automation systems allowing us to perform complex shots that are difficult to achieve while flying manually. We support resolutions from HD to 6K.</p>
                         </div>
                     </div>
                 </div>
@@ -37,11 +36,11 @@
         <div class="column small-12">
             <div class="row standard-width">
                 <div class="column text-center small-12">
-                    <h2>Professionally Edited Video</h2>
+                    <h2>Professionally Edited Video and Sound</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>Our staff members have years of experience using the most advanced post production tools such as Autodesk Flame and Smoke, Davinci Resolve, Adobe After Effects, and Avid Media Composer. Whether you need a simple Real Estate video or a full scale production of a large estate, Cinescape is equipped to handle your HD or 4K project and deliver it to your streaming service.</p>
+                            <p>Our staff members have years of film and television experience using the most advanced post production tools such as Autodesk Flame and Smoke, Davinci Resolve, Adobe After Effects, Avid Media Composer and Digidesign Protools. Whether you need an add spot for internet marketing or a full scale production meeting broadcast specifications, Cinescape is equipped to handle your HD or 4K project and deliver it with your broadcast requirements.</p>
                         </div>
                         <div class="small-12 medium-4 columns small-order-1 medium-order-2">
                             <img src="dist/images/video-editing.jpg" alt="Video Editing Software"/>
